# Maillard

./: .gitignore  Installation.md  LICENSE  README.md  debug_fft.py  debug_fft_mech.yaml  debug_fft_results.csv  e701_files.txt  environment.yml  input.toml  minimal.yaml  patch_tests.py  pipeline_debug.txt  project_summary_for_optimization.md  pyproject.toml  pyrightconfig.json  pytest.ini  solute  test_balance.py  test_balance2.py  test_cantera_comp.py  test_compete.yaml  test_curated.py  test_cys.py  test_pipeline_output.py  test_smirks.py
data/: formulation_grid.yml
docs/: Claude_feedback.md  Elicit - Maillard Pathways in Plant-Based Cooking - Report.md  Elicit - Maillard Reaction Pathways in Meat Cooking - Report.md  Kinetic and Thermodynamic Profiling of Aqueous Maillard and Advanced Sulfur Pathways_ An Exhaustive Analysis of Arrhenius Parameters.md  Maillard_Plant_based.md  Maillard_meat.md  SMIRKS_SYSTEM.md  SOTA_Maillard_Architecture.md  VALIDATION_DEEP_DIVE.md  VALIDATION_GUIDE.md  architecture.md  pathways.md  xtb_limitations.md
results/: curated_screening_results.json  mace_fine_tuning.extxyz  maillard_results.db  mlp_benchmark.json
scripts/: benchmark_mace_rmsd.py  benchmark_xtb.py  calibrate_barriers.py  check_env.py  compare_sim_to_lit.py  demo_sensitivity.py  diagnose_benchmark_selectivity.py  docker_maillard.sh  extract_benchmarks.py  generate_benchmark_index.py  generate_benchmark_summary.py  generate_benchmark_targets.py  generate_mace_training_data.py  generate_mapped_geometries.py  generate_rmg_inputs.py  migrate_results_to_db.py  mlp_benchmark.py  (+12 more)
(+265 files in other folders)
